--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
         }
 
         .bio {
-            font-size: 18px; /* Smaller font size */
-            font-style: italic; /* Italicized text */
+            font-size: 18px; 
+            font-style: italic; 
             color: rgba(255, 255, 255, 0.8);
-            text-shadow: 0 0 10px #9400D3, 0 0 20px #9400D3; /* Purple glow */
+            text-shadow: 0 0 10px #9400D3, 0 0 20px #9400D3; 
             max-width: 600px;
             margin: 0 auto;
             line-height: 1.5;
@@ -323,7 +323,7 @@
     <div id="custom-cursor"></div>
 
     <div class="music-control" id="musicControl"></div>
-    <input type="range" id="volume-slider" min="1" max="100" step="1" value="100">
+    <input type="range" id="volume-slider" min="0" max="100" step="1" value="100">
 
     <audio id="backgroundMusic" loop>
         <source src="music/background-music.mp3" type="audio/mpeg">
