--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <p>NAME: DANNY<br>
             AGE: 14<br>
             SPECS: i9 14900K | RTX 5080 (Soon)<br>
-            BIO: Hello, my name is Danny. My hobbies include rocketry, programming, and CS2 HvH. I don't want to elaborate further right now; that's all for the moment…</p>
+            BIO: Hello, my name is Danny. My hobbies include rocketry, programming, and CS2 HvH. I don't want to elaborate further right now; that's all for the moment… (You can spin the wheel of icons btw)</p>
         </div>
         <button class="option-button" onclick="closeAboutPage()">> RETURN</button>
     </div>
