--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                 <div class="profile-container">
                     <img src="images/profile-logo.png" alt="Profile" class="profile-pic">
                     <h1 class="name-title">Danny</h1>
-                    <p class="tagline">Digital sigma & co-founder of ESRO CHEATS. Offering premium solutions in the cheating industry with a focus on innovation and user experience.</p>
+                    <p class="tagline">Digital sigma, co-founder of ESRO CHEATS & staff at Calamari. ESRO offers premium solutions in the cheating industry with a focus on innovation and user experience.</p>
                 </div>
             </div>
         </div>
@@ -589,7 +589,7 @@
                 <h2 class="section-title">ABOUT ME</h2>
                 <div class="bio-container">
                     <p class="bio-text">I'm a passionate cheater who practically started cheating as soon as they came out of the worm.</p>
-                    <p class="bio-text">My cheating journey began with roblox and at first I thought I was a god... Until I realized most of the scripts we're client-sided.</p>
+                    <p class="bio-text">My cheating journey began with Roblox, then evlolved too good games like Rust...</p>
                     <p class="bio-text">Now I can't go without cheating on every game I play, It's a drug, but it's probaly the best way too have fun with little too no downsides.</p>
                 </div>
             </div>
