--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                 <div class="profile-container">
                     <img src="images/profile-logo.png" alt="Profile" class="profile-pic">
                     <h1 class="name-title">Danny</h1>
-                    <p class="tagline">Digital sigma, co-founder of ESRO CHEATS & staff at Calamari. ESRO offers premium solutions in the cheating industry with a focus on innovation and user experience.</p>
+                    <p class="tagline">Digital sigma & Co-Founder of ESRO Cheats. ESRO offers premium solutions in the cheating industry with a focus on innovation and user experience.</p>
                 </div>
             </div>
         </div>
